--- a/source/F10Y.Z0009.Construction/F10Y.Z0009.Construction.csproj
+++ b/source/F10Y.Z0009.Construction/F10Y.Z0009.Construction.csproj
@@ -1,14 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
+  <PropertyGroup Label="Main">
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <NoWarn>CS1573;CS1587;CS1591;IDE0130</NoWarn>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>1591</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Label="Package">
+    <Version>1.0.0</Version>
     <Authors>DCoats</Authors>
-    <Company>Rivet</Company>
-    <Copyright>Copyright (c) Rivet 2025</Copyright>
-    <Description>--- ADD DESCRIPTION ---</Description>
+    <Company>Functionairy</Company>
+    <Copyright>Copyright © Functionairy 2025</Copyright>
+    <Description>Construction console project for the F10Y.Z0009 library.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/Functionairy/F10Y.Z0009.git</RepositoryUrl>
