--- a/source/F10Y.Z0009/F10Y.Z0009.csproj
+++ b/source/F10Y.Z0009/F10Y.Z0009.csproj
@@ -16,5 +16,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\F10Y.T0003\source\F10Y.T0003\F10Y.T0003.csproj" />
+    <ProjectReference Include="..\..\..\F10Y.Z0008\source\F10Y.Z0008\F10Y.Z0008.csproj" />
   </ItemGroup>
 </Project>
